Adição do google-services.json ao gitignore e da classe DogResponse

--- a/.gitignore
+++ b/.gitignore
@@ -134,6 +134,9 @@ fabric.properties
 .idea
 **/node_modules/*
 **/.firebaserc
+app/google-services.json
+google-services.json
+
 ### Java ###
 # Compiled class file
 
