--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion 27
@@ -33,11 +34,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:16.0.2'
     implementation 'com.google.firebase:firebase-database:16.0.1'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-
     implementation "com.android.support:support-v4:$support_version"
     implementation 'com.thoughtbot:expandablerecyclerview:1.3'
-
     implementation "com.android.support:support-v4:$support_version"
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.4'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
